--- a/src/statics/css/nav.scss
+++ b/src/statics/css/nav.scss
@@ -3,7 +3,7 @@
 
 .nav-list {
     // display: flex !important;
-	align-items: right;
+	text-align: right !important;
 	position: fixed !important;
 	z-index: 2;
 	height: 70px;
