fixed home and navbar

--- a/src/statics/css/about.scss
+++ b/src/statics/css/about.scss
@@ -54,8 +54,8 @@
     box-shadow: 0 10px 30px -15px colors.$darker-gray;
     border-radius: 10px;
     padding: 2%;
-    height: 300px;
-    overflow: scroll;
+    // height: 300px;
+    // overflow: scroll;
 }
 
 .strong {
