--- a/src/statics/css/common.scss
+++ b/src/statics/css/common.scss
@@ -27,7 +27,7 @@ html, body {
 #background-wave {
     display: inline-block;
     position: fixed;
-    top: -10%;
+    top: 10% !important; 
     left: 0;  
     padding: 0;
     overflow: hidden;
@@ -49,9 +49,9 @@ html, body {
 
 .section-container {
     margin: 8% 5% 1% 5%;
-    width: 100% !important;
+    // width: 100% !important;
+    height: 100vh;
     text-align: center !important;
-    scroll-behavior: smooth !important;
 }
 
 .header {
@@ -83,31 +83,25 @@ html, body {
 
 @media (max-width: breakpoints.$laptop-1200) {
     #background-wave {
-        top: -5%;
-    }
-}
-
-@media (max-width: breakpoints.$laptop-1050) {
-    #background-wave {
-        top: 3%;
+        top: 5%;
     }
 }
 
 @media (max-width: breakpoints.$laptop-1000) {
     #background-wave {
-        top: 8%;
+        top: 10% !important;
     }
 }
 
-@media (max-width: breakpoints.$laptop-850) {
-    #background-wave {
-        top: 10%;
-    }  
-}
+// @media (max-width: breakpoints.$laptop-850) {
+//     #background-wave {
+//         top: 10%;
+//     }  
+// }
 
 @media (max-width:breakpoints.$tablet) {    
     .header {
-        font-size: 45px;
+        // font-size: 45px;
     }
 
     .subheader {
@@ -116,6 +110,10 @@ html, body {
 
     #background-wave {
         // top: 15%;
+        // height: 100%;
+        position: absolute;
+        left:0 !important;
+        top:0 !important;
     }  
 }
 
@@ -127,4 +125,10 @@ html, body {
     .subheader {
         font-size: 18px !important;
     }
+
+    #background-wave {
+        top: 7% !important;
+        height: 2500px;
+        display: none;
+    }  
 }
