--- a/src/statics/css/common.scss
+++ b/src/statics/css/common.scss
@@ -9,7 +9,8 @@ html, body {
 }
 
 #main-container {
-    background-color: colors.$light-pink !important;
+    // background-color: colors.$light-pink !important;
+    background: linear-gradient(colors.$light-pink , colors.$darkest-pink );;
     height: 100vh !important;
     width: 100% !important;
     margin: 0;
@@ -25,12 +26,11 @@ html, body {
 }
 
 #background-wave {
-    display: inline-block;
     position: fixed;
-    top: 10% !important; 
+    top: 0 !important; 
     left: 0;  
     padding: 0;
-    overflow: hidden;
+    z-index: 0;
 
     path {
         fill: colors.$darker-pink !important;
@@ -43,6 +43,7 @@ html, body {
     padding: 0;
     font-family: 'Roboto Slab', serif !important;
     display: block !important;
+    z-index: 2000;
 }
 
 .section-container {
@@ -50,6 +51,7 @@ html, body {
     // width: 100% !important;
     // height: 100vh;
     text-align: center !important;
+    z-index: 2000;
 }
 
 .header {
@@ -66,17 +68,14 @@ html, body {
 }
 
 #whitePane {
-    text-align: justify;
-    width: 90%;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255,255,255,1);
     padding: 3%;
     border-radius: 10px;
     font-weight: 500;
-    max-height: 500px !important;
-    overflow: scroll;
     font-size: 16px;
     box-shadow: 10px 10px 56px -26px rgba(0,0,0,0.55);
-
+    text-align: left !important;
+    z-index: 2000;
 }
 
 @media (max-width: breakpoints.$laptop-1200) {
@@ -87,46 +86,23 @@ html, body {
 
 @media (max-width: breakpoints.$laptop-1000) {
     #background-wave {
-        top: 10% !important;
+        height: 2500px;
+        z-index: 0;
     }
 }
 
-// @media (max-width: breakpoints.$laptop-850) {
-//     #background-wave {
-//         top: 10%;
-//     }  
-// }
 
-@media (max-width:breakpoints.$tablet) {    
-    .header {
-        // font-size: 45px;
-    }
-
-    .subheader {
-        font-size: 20px;
-    }
-
-    #background-wave {
-        // top: 15%;
-        // height: 100%;
-        position: absolute;
-        left:0 !important;
-        top:0 !important;
-    }  
-}
 
 @media (max-width:breakpoints.$phone) {
-    .header {
-        font-size: 30px !important;
-    }
-
-    .subheader {
-        font-size: 18px !important;
-    }
 
     #background-wave {
-        top: 7% !important;
-        height: 2500px;
-        display: none;
+        top: 0% !important;
+        height: 4500px;
+        // display: none;
     }  
+
+    #whitePane {
+        font-size: 12px !important;
+        text-align: left !important;
+    }
 }
