--- a/src/statics/css/home.scss
+++ b/src/statics/css/home.scss
@@ -10,10 +10,10 @@
     width: 100%;
     padding: 0 2%;
     text-align: right !important;
-    color: colors.$darker-gray;
+    color: white;
     font-weight: bold;
     font-size: 16px !important;
-    background-color: rgba(255, 255, 255, 0.75);
+    margin-top: 10%;
 }
 
 /* HOME */
@@ -21,6 +21,7 @@
     display: block !important;
     position: relative;
     height: 100vh !important;
+    z-index: 1000;
 }
 
 .home-details {
@@ -161,22 +162,30 @@
 }
 
 @media (max-width: breakpoints.$phone) {
-    #avatar-col {
-        height: 200px;
-        width: 200px !important;
-    }  
+    .my-details {
+        h1 {
+            font-size: 5vh;
+        }
 
-    #gradient {
-        width: 55%;
-        height: 255px;
-        // width: 225px !important;
-        margin: 0 50%;
+        p {
+            font-size: 20px;
+        }
     }
+    // #avatar-col {
+    //     height: 200px;
+    //     width: 200px !important;
+    // }  
 
-    .avatar-img {
-        width: 185px !important;
-        height: 185px;
-    }
+    // #gradient {
+    //     width: 55%;
+    //     width: 225px !important;
+    //     margin: 0 50%;
+    // }
+
+    // .avatar-img {
+    //     width: 185px !important;
+    //     height: 185px;
+    // }
 
     #details-col.animate__animated.animate__slideInRight.animate__slower.col {
         flex: none;
