--- a/src/statics/css/skills.scss
+++ b/src/statics/css/skills.scss
@@ -3,7 +3,7 @@
 
 .skills-row {
     // margin-bottom: 3% !important;
-    margin: 0 5% 3% 5% !important;
+    margin: 0 5% 5% 5% !important;
     width: 100%;
 
     li {
@@ -12,10 +12,17 @@
 }
 
 .skills-header {
-    font-size: 20px !important;
     color: colors.$darker-gray;
     font-size: 24px !important;
     font-weight: bold;
     margin-bottom: 2%;
+}
+
+.badge, .bg-primary {
+    background-color: colors.$hover-link !important;
+    color: colors.$darker-gray;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    font-size: 16px;
 }
 
